executable_semantics/testdata/undef1.golden
executable_semantics/testdata/undef1.6c:8: syntax error
EXIT CODE: 255
